--- a/index.html
+++ b/index.html
@@ -2,35 +2,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/theme/ESS_logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.cdnfonts.com/css/plantin-mt-pro?styles=66100" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/fc609eb62c0de5abdda2d091abaed228?family=Plantin+Infant+MT+Std+Bold" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body style= "background-image: linear-gradient(to bottom, #409fa5 , #2d888d, #2e3853, #162a31, #2e3853, #2d888d, #409fa5);">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </body>
 </html>
 
 <!--header-->
-<div class="row mx-2 border justify-content-center">
-    <div class="container-lg mx-5 my-3 p-1 border">
-        <div class="row justify-content-center align-items-center">
-            <div class="col-2 border d-none d-sm-block">
-                <img src="assets/ess_logo.png" alt="ess_logo" class="img-fluid">
-            </div>
-            <div class="col-8 col-md-6 border justify-content-center">
-                <div class="row text-center">
-                    <h1 class="display-4">Earth Science Society</h1>
-                </div>
-                <div class="row text-center">
-                    <h5>Indian Institute of Technology Kanpur</h5>
-                </div>
-            </div>
-            <div class="col-2 border d-none d-md-block">
-                <img src="assets/ess_logo.png" alt="iitk.logo" class="img-fluid">
-            </div>
-        </div>    
+<div class="row border justify-content-center" style="background-image: url(assets/universe-1566159_1920.jpg);">
+    <div class="col-2 py-1 d-none d-md-block">
+        <div class="container">
+            <img src="assets/ESS_logo.png" alt="eagesc logo" style="height: 100px; width:auto;">
+        </div>
+    </div>
+    <div class="col justify-content-center py-2">
+        <div class="row justify-content-center">
+            <h1 style="text-align: center; font-family: Georgia, 'Times New Roman', Times, serif; color: white;">
+                <b>EARTH SCIENCE SOCIETY</b>
+            </h1>
+        </div>
+        <div class="row justify-content-center">
+            <h4 style="text-align: center; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: white;">
+                INDIAN INSTITUTE OF TECHNOLOGY KANPUR
+            </h4>
+        </div>
+    </div>
+    <div class="col-2 py-1 d-none d-md-block">
+        <div class="container">
+            <img src="assets/IITK_logo.png" alt="eagesc logo" style="height: 100px; width:auto;">
+        </div>
     </div>
 </div>
 <!--add "has-bg-img" to class incase of a background image-->
@@ -40,51 +47,28 @@
 <!--https://youtu.be/qNifU_aQRio-->
 <!--Check for how to customize/create the navigation bar-->
 <!--Watch the end of the video to add a Search button to the top of the page-->
-<nav class="navbar navbar-light mx-3 my-3 p-1 bg-light sticky-top navbar-expand-sm"> <!--sticky-top sticks the navbar to the very top of the page-->
-    <a href="index.html" class="navbar-brand d-sm-none h1">
-        <img src="assets/ess_logo.png" alt="ess_logo" width="30" height="30">
-        Earth Science Society
+<nav class="navbar sticky-top navbar-expand-md"> <!--sticky-top sticks the navbar to the very top of the page-->
+    <a href="index.html" class="navbar-brand h1 d-md-none">
+        <img src="assets/ESS_logo.png" alt="ess_logo" style="height: 35px; width: auto;">
     </a>
     <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <i class="fa-solid fa-bars" style="color: white;"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav"> <!--navbarNav is a variable to be used in the data-target-->
         <ul class="navbar-nav mx-auto">
-            <li class="nav-item active px-3">
-                <a href="index.html" class="nav-link active">
+            <li class="nav-item active px-5">
+                <a href="index.html" class="nav-link active navbar-links" style="color: #3533cb">
                     Home
                 </a>
             </li>
-            <li class="nav-item active px-3">
-                <a href="pages/team.html" class="nav-link">
-                    Core Team
+            <li class="nav-item active px-5">
+                <a href="pages/team.html" class="nav-link navbar-links">
+                    Team
                 </a>
             </li>
-            <li class="nav-item active px-3">
-                <a href="pages/events_main.html" class="nav-link">
+            <li class="nav-item active px-5">
+                <a href="pages/events_main.html" class="nav-link navbar-links">
                     Events
-                </a>
-            </li>
-            <li class="nav-item dropdown px-3">
-                <a href="#" class="nav-link dropdown-toggle" id="eventsdropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Gallery
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="eventsdropdown">
-                    <li>
-                        <a href="#" class="dropdown-item disabled">
-                            Teacher's Day
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="dropdown-item disabled">
-                            Fresher's Night
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item px-3">
-                <a href="#" class="nav-link disabled">
-                    Merch
                 </a>
             </li>
         </ul>
@@ -93,8 +77,8 @@
 
 <!--carousel-->
 <!--edit all images to 3x1 landscape dimension-->
-<div class="row mx-2 border justify-content-center">
-    <div class="container-lg justify-content-center mx-5 my-1 border">
+<div class="row justify-content-center my-1">
+    <div class="container-lg justify-content-center">
         <div id="ess-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-slide="false">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#ess-carousel" data-bs-slide-to="0" class="active bg-dark" aria-current="true" aria-label="Slide 1"></button>
@@ -125,100 +109,110 @@
 </div>
 
 <!--main content-->
-<div class="row mx-2 border justify-content-center">
-    <div class="container-lg mx-5 my-3 p-1 border">
+<div class="row mx-1 justify-content-center">
+    <div class="container-lg">
         <div class="row justify-content-center">
-            <div class="col-8 px-3 justify-content-center">
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim ullam aperiam, tenetur quisquam magni odit facilis libero numquam nesciunt modi corporis non nostrum esse est voluptatem delectus id nulla consequatur.
-                </p>
-                <div class="row mx-1 my-2 border">
-                    <p>
-                        "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos ipsum quos eligendi veniam odio saepe sequi eum magnam natus at."
-                    </p>
-                    <p class="text-end">
-                        -Ayush Gupta, President
-                    </p>
+            <div class="col-8 px-2 py-1 justify-content-center">
+                <div class="container-lg main-box p-1 mb-1" style="background-color: lightgray;">
+                    <div class="row mx-1">
+                        <h4 class="p-1" style="text-align: center; 1px solid black; background-image: linear-gradient(to bottom right, red , blue); color: white; font-family: fantasy;">
+                            What's new?
+                        </h4>
+                        <a href="#">
+                            <button class="my-1 announcement-btn" style="text-align: justify;">
+                                <b>(Upcoming)</b> Workshop on the expansive possibilities of utilizing Machine Learning in the Earth Sciences domain.
+                            </button>
+                        </a>
+                        <a href="#">
+                            <button class="my-1 announcement-btn" style="text-align: justify;">
+                                <b>(Upcoming)</b> Gear up for the Intra-departmental Sports Meet...
+                            </button>
+                        </a>
+                    </div>
                 </div>
-                <div class="row mx-1 my-2 border">
-                    <p>
-                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum consequuntur eos animi iure autem unde quaerat mollitia facilis assumenda ullam veniam deserunt voluptatibus, rem quo harum facere dolor repellat quibusdam?"
+                <div class="container-lg main-box mt-1">
+                    <p class="normal-text" style="text-align: center;">
+                        <strong>
+                            Welcome to the virtual home of the Earth Science Society @ IIT Kanpur!
+                        </strong>
                     </p>
-                    <p class="text-end">
-                        -Dr Indra Sekhar Sen, Faculty Advisor
+                    <p class="normal-text">
+                        The Earth Science Society at IIT Kanpur was established in 2021 with a vision to unite the department of Earth Sciences at IIT Kanpur through various cultural, academic, and sports events.
                     </p>
+                    <p class="normal-text">
+                        We intend to do this by-
+                        <ul class="normal-text">
+                            <li>
+                                conducting events to bring faculties, staff, and students on the same platform for bonding.
+                            </li>
+                            <li>
+                                building an ecosystem where community members will get various opportunities to develop themselves.
+                            </li>
+                            <li>
+                                fostering a supportive and inclusive community for students and other members.
+                            </li>
+                        </ul>
+                    </p>
+                    <div class="row mx-2 my-1 quote-box">
+                        <p class="quote-text">
+                            "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos ipsum quos eligendi veniam odio saepe sequi eum magnam natus at."
+                        </p>
+                        <p class="text-end quote-by">
+                            -<b>Ayush Gupta</b><br> 
+                             <i>President</i><br>
+                        </p>
+                    </div>
+                    <div class="row mx-2 my-1 quote-box">
+                        <p class="quote-text">
+                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum consequuntur eos animi iure autem unde quaerat mollitia facilis assumenda ullam veniam deserunt voluptatibus, rem quo harum facere dolor repellat quibusdam?"
+                        </p>
+                        <p class="text-end quote-by">
+                            -<b>Dr Indra Sekhar Sen</b><br>
+                            <i>Faculty Advisor</i><br> 
+                        </p>
+                    </div>
+                    <div class="row justify-content-center">
+                        <!--not linked yet-->
+                        <div class="col-12 justify-content-center">
+                            <h6 style="text-align: center;">
+                                <a href="#" target="_blank"><i class="fa-solid fa-envelope icon-1" style="color: black;"></i></a>&nbsp;
+                                <a href="#" target="_blank"><i class="fa-brands fa-linkedin icon-1" style="color: black;"></i></a>&nbsp;
+                                <a href="#" target="_blank"><i class="fa-brands fa-instagram icon-1" style="color: black;"></i></a>&nbsp;
+                                <a href="#" target="_blank"><i class="fa-brands fa-twitter icon-1" style="color: black;"></i></a>&nbsp;
+                                <a href="#" target="_blank"><i class="fa-brands fa-facebook icon-1" style="color: black;"></i></a>&nbsp;
+                            </h6>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-4 justify-content-center">
-                <div class="row mx-1 my-1 border">
-                    <h4>
-                        What's new?
+            <div class="col-4 my-1 px-2 justify-content-center">
+                <div class="row my-1 mx-1 justify-content-center" style="border-style: solid;">
+                    <h4 class="p-1" style="text-align: center; 1px solid black; background-color: black; color: white; font-family: fantasy;">
+                        Meme of the Week
                     </h4>
-                    <ul class="mx-3" style="list-style-type: disc;">
-                        <li>
-                            <a href="#"> 
-                                This is the 1st announcement.
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Second announcement.
-                            </a>
-                        <li>
-                            <a href="#">
-                                Announcement 3
-                            </a>
-                        </li>    
-                        </li>
-                    </ul>
+                    <img src="assets/motw.jpg" alt="" style="height: 300px; width: auto;">
+                    <span style="text-align: end; font-family: Arial, Helvetica, sans-serif; font-style: italic; font-size: 10px;">
+                        source: r/geologymemes
+                    </span>
                 </div>
-                <div class="row mx-1 my-1 border">
-                    <h4>
-                        Upcoming Events
+                <div class="row my-1 mx-1 justify-content-center" style="border-style: solid;">
+                    <h4 class="p-1" style="text-align: center; 1px solid black; background-color: black; color: white; font-family: fantasy;">
+                        Events Calendar
                     </h4>
-                    <ul class="mx-3" style="list-style-type: disc;">
-                        <li>
-                            <a href="#">
-                                (dd/mm/yyyy) Event 1
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                (dd/mm/yyyy) Event 2
-                            </a>
-                        </li>
-
-                    </ul>
+                    <iframe style="height: 300px; width: 400px;" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Asia%2FKolkata&bgcolor=%23000000&mode=MONTH&src=ZmNhNGY5ZGVkYzFhZmIxNGJhZmM0NTY4NTc1NjI3OGJiMjQ3MmRhZWZiZTVhNTlkMzc4MzdhYjdjNjg2NzkzM0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F6BF26" style="border-width:1px" width="800" height="600" frameborder="0" scrolling="no">
+                    </iframe>
                     <!--<div class="elfsight-app-be12056e-689c-4ac8-8512-4ecb61e11562" data-elfsight-app-lazy></div>-->
                 </div>
                     <!--either this or gooogle calendar-->
-                <div class="row mx-1 my-1 border">
-                    <h4>
-                        Social Media feed
-                    </h4>
-                    <!--One social media handle feed-->
-                </div>
             </div>
         </div>
     </div>
 </div>
 
 <!--footer-->
-<div class="row mx-0 border justify-content-center">
-    <div class="container-lg mx-5 my-3 bg-dark text-center border">
-        <div class="row justify-content-center">
-            <div class="col-5 my-2">
-                <h5 class="text-white">
-                    Quick Links
-                </h5>
-                <p class="text-white">
-                    <a href="https://www.iitk.ac.in/es/">Dept. Of Earth Sciences</a><br>
-                    <a href="https://www.iitk.ac.in/">IIT Kanpur Home</a><br>
-                </p>
-            </div>
-        </div>
-        <small class="justify-content-center text-white">
-            designed by <a href="https://swastiksumanbehera.github.io//" class="">Swastik Suman Behera</a>
-        </small>
-    </div>
+<div class="row justify-content-center pt-2" style="background-color: black;">
+    <p class="text-center" style="font-family: 'Times New Roman', Times, serif; color: white;">
+        &copy; 2024, <a href="https://swastiksumanbehera.github.io/" target="_blank" style="color: white;">Swastik Suman Behera</a>&nbsp;
+        <a href="https://github.com/swastiksumanbehera" target="_blank"><i class="fa-brands fa-github" style="color: white;"></i></a>
+    </p>
 </div>
