--- a/pages/events_main.html
+++ b/pages/events_main.html
@@ -2,35 +2,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="../assets/theme/ESS_logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="../styles.css">
+    <link href="https://fonts.cdnfonts.com/css/plantin-mt-pro?styles=66100" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/fc609eb62c0de5abdda2d091abaed228?family=Plantin+Infant+MT+Std+Bold" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body style= "background-image: linear-gradient(to bottom, #409fa5 , #2d888d, #2e3853, #162a31, #2e3853, #2d888d, #409fa5);">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </body>
 </html>
 
 <!--header-->
-<div class="row mx-2 border justify-content-center">
-    <div class="container-lg mx-5 my-3 p-1 border">
-        <div class="row justify-content-center align-items-center">
-            <div class="col-2 border d-none d-sm-block">
-                <img src="../assets/ess_logo.png" alt="ess_logo" class="img-fluid">
-            </div>
-            <div class="col-8 col-md-6 border justify-content-center">
-                <div class="row text-center">
-                    <h1 class="display-4">Earth Science Society</h1>
-                </div>
-                <div class="row text-center">
-                    <h5>Indian Institute of Technology Kanpur</h5>
-                </div>
-            </div>
-            <div class="col-2 border d-none d-md-block">
-                <img src="../assets/ess_logo.png" alt="iitk.logo" class="img-fluid">
-            </div>
-        </div>    
+<div class="row border justify-content-center" style="background-image: url(../assets/universe-1566159_1920.jpg);">
+    <div class="col-2 py-1 d-none d-md-block">
+        <div class="container">
+            <img src="../assets/ESS_logo.png" alt="eagesc logo" style="height: 100px; width:auto;">
+        </div>
+    </div>
+    <div class="col justify-content-center py-2">
+        <div class="row justify-content-center">
+            <h1 style="text-align: center; font-family: Georgia, 'Times New Roman', Times, serif; color: white;">
+                <b>EARTH SCIENCE SOCIETY</b>
+            </h1>
+        </div>
+        <div class="row justify-content-center">
+            <h4 style="text-align: center; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: white;">
+                INDIAN INSTITUTE OF TECHNOLOGY KANPUR
+            </h4>
+        </div>
+    </div>
+    <div class="col-2 py-1 d-none d-md-block">
+        <div class="container">
+            <img src="../assets/IITK_logo.png" alt="eagesc logo" style="height: 100px; width:auto;">
+        </div>
     </div>
 </div>
 
@@ -38,51 +45,28 @@
 <!--https://youtu.be/qNifU_aQRio-->
 <!--Check for how to customize/create the navigation bar-->
 <!--Watch the end of the video to add a Search button to the top of the page-->
-<nav class="navbar navbar-light mx-3 my-3 p-1 bg-light sticky-top navbar-expand-sm"> <!--sticky-top sticks the navbar to the very top of the page-->
-    <a href="index.html" class="navbar-brand d-sm-none h1">
-        <img src="../assets/ess_logo.png" alt="ess_logo" width="30" height="30">
-        Earth Science Society
+<nav class="navbar sticky-top navbar-expand-md"> <!--sticky-top sticks the navbar to the very top of the page-->
+    <a href="index.html" class="navbar-brand h1 d-md-none">
+        <img src="../assets/ESS_logo.png" alt="ess_logo" style="height: 35px; width: auto;">
     </a>
     <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <i class="fa-solid fa-bars" style="color: white;"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav"> <!--navbarNav is a variable to be used in the data-target-->
         <ul class="navbar-nav mx-auto">
-            <li class="nav-item active px-3">
-                <a href="../index.html" class="nav-link">
+            <li class="nav-item active px-5">
+                <a href="../index.html" class="nav-link active navbar-links">
                     Home
                 </a>
             </li>
-            <li class="nav-item active px-3">
-                <a href="../pages/team.html" class="nav-link">
-                    Core Team
+            <li class="nav-item active px-5">
+                <a href="../pages/team.html" class="nav-link active navbar-links">
+                    Team
                 </a>
             </li>
-            <li class="nav-item active px-3">
-                <a href="../pages/events_main.html" class="nav-link active">
+            <li class="nav-item active px-5">
+                <a href="../pages/events_main.html" class="nav-link active navbar-links" style="color: #3533cb">
                     Events
-                </a>
-            </li>
-            <li class="nav-item dropdown px-3">
-                <a href="#" class="nav-link dropdown-toggle" id="eventsdropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Gallery
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="eventsdropdown">
-                    <li>
-                        <a href="#" class="dropdown-item disabled">
-                            Teacher's Day
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="dropdown-item disabled">
-                            Fresher's Night
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item px-3">
-                <a href="#" class="nav-link disabled">
-                    Merch
                 </a>
             </li>
         </ul>
@@ -92,48 +76,55 @@
 <!--main content-->
 <!--Posters potrait of 210x280 dimension-->
 <!--suggestion: go for a fading carousal in upcoming events if a lot of empty space is present-->
-<div class="row mx-2 border justify-content-center">
-    <div class="container-lg mx-5 my-3 p-1 border">
-        <div class="row py-1 justify-content-center">
-            <h4 class="text-center">
+<div class="row mx-2 justify-content-center">
+    <div class="container-lg mx-5 my-3 p-1">
+        <div class="row mx-2 justify-content-center">
+            <h4 class="text-center" style="text-align: center; 1px solid black; background-color: black; color: white; font-family: fantasy;">
                 Upcoming
             </h4>
         </div>
-        <div class="row py-1 justify-content-center">
-            <div class="col-4 col-lg-3 mx-1 justify-content-center d-block border">
-                <a href="../subpages/event.html"><img class="img-fluid event-image" src="../assets/posters/event_poster.png" alt="template"></a>
+        <div class="row py-2 mx-2" style="border-style: solid; border-color: black; border-width: 4px; background-image: linear-gradient(to right, #004aad, #cb6be6);">
+            <div class="col-5 col-md-4 col-lg-3 mx-1 justify-content-center d-block">
+                <a href="../subpages/event.html"><img class="img-fluid event-image" style="border: 3px solid black;" src="../assets/posters/Freshers Night.jpeg" alt="template"></a>
+            </div>
+            <div class="col-6 col-md-7 col-lg-8 mx-1 justify-content-center d-block">
+                <div class="row mx-1">
+                    <h4 class="p-1" style="text-align: center; border: 1px solid black; background-image: linear-gradient(to bottom right, red , blue); color: white; font-family: fantasy;">
+                        Intra-departmental Sports Meet 2024
+                    </h4>
+                </div>
+                <div class="row mx-1">
+                    <p class="normal-text">
+                        <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad maxime, qui dignissimos totam aut quasi quae veniam beatae autem eaque nemo amet, alias nihil possimus, atque unde quidem asperiores aliquam!</b>
+                    </p>
+                    <span class="normal-text">
+                        <b>Date: dd/mm/yyyy <br>
+                        Venue: Some ground</b>
+                    </span>
+                    <p class="normal-text">
+                        <a href="#" style="color: lime;"><b>Click here to register for the event!</b></a>
+                    </p>
+                </div>
             </div>
         </div>
-        <div class="row py-1 justify-content-center">
-            <h4 class="text-center">
+        <div class="row py-2 mx-2">
+            <h4 class="text-center" style="text-align: center; 1px solid black; background-color: black; color: white; font-family: fantasy;">
                 Previous Events
             </h4>
-            <div class="col-4 col-lg-3 mx-2 justify-content-center d-block border">
-                <a href="../subpages/event.html"><img src="../assets/posters/Freshers Night.jpeg" alt="freshers_pos" class="img-fluid event-image"></a>
+            <div class="col-3 col-lg-2 mx-3 justify-content-center d-block">
+                <a href="../subpages/freshers.html"><img src="../assets/posters/Freshers Night.jpeg" alt="freshers_pos" style="border: 2px solid black;" class="img-fluid event-image"></a>
             </div>
-            <div class="col-4 col-lg-3 mx-2 justify-content-center d-block border">
-                <a href="../subpages/event.html"><img src="../assets/posters/Teachers Day.jpeg" alt="teachers_day_pos" class="img-fluid event-image"></a>
+            <div class="col-3 col-lg-2 mx-3 justify-content-center d-block">
+                <a href="../subpages/teachers-day.html"><img src="../assets/posters/Teachers Day.jpeg" alt="teachers_day_pos" style="border: 2px solid black;" class="img-fluid event-image"></a>
             </div>
         </div>
     </div>
 </div>
 
 <!--footer-->
-<div class="row mx-0 border justify-content-center">
-    <div class="container-lg mx-5 my-3 bg-dark text-center border">
-        <div class="row justify-content-center">
-            <div class="col-5 my-2">
-                <h5 class="text-white">
-                    Quick Links
-                </h5>
-                <p class="text-white">
-                    <a href="https://www.iitk.ac.in/es/">Dept. Of Earth Sciences</a><br>
-                    <a href="https://www.iitk.ac.in/">IIT Kanpur Home</a><br>
-                </p>
-            </div>
-        </div>
-        <small class="justify-content-center text-white">
-            designed by <a href="https://swastiksumanbehera.github.io//" class="">Swastik Suman Behera</a>
-        </small>
-    </div>
+<div class="row justify-content-center pt-2" style="background-color: black;">
+    <p class="text-center" style="font-family: 'Times New Roman', Times, serif; color: white;">
+        &copy; 2024, <a href="https://swastiksumanbehera.github.io/" target="_blank" style="color: white;">Swastik Suman Behera</a>&nbsp;
+        <a href="https://github.com/swastiksumanbehera" target="_blank"><i class="fa-brands fa-github" style="color: white;"></i></a>
+    </p>
 </div>
